src/test/ui/range/range_traits-4.rs
// compile-pass

use std::ops::*;

#[derive(Copy, Clone)]
struct R(RangeTo<usize>);


fn main() {}
